src/objects/CBVariable3__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <label>ExtId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <displayFormat>V{00000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </fields>
    <label>CB Variable 3</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ExtId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Variables 3</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>